--- a/src/main/kotlin/ui/PostDetailForm.form
+++ b/src/main/kotlin/ui/PostDetailForm.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="rootPanel" layout-manager="GridLayoutManager" row-count="5" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="500" height="400"/>
+      <xy x="20" y="20" width="504" height="400"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -24,7 +24,7 @@
           <text value="Label"/>
         </properties>
       </component>
-      <component id="9a4c1" class="javax.swing.JLabel" binding="lblBody">
+      <component id="9a4c1" class="javax.swing.JLabel">
         <constraints>
           <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
@@ -32,9 +32,12 @@
           <text value="Post Description"/>
         </properties>
       </component>
-      <component id="96f75" class="javax.swing.JLabel">
+      <component id="96f75" class="javax.swing.JLabel" binding="lblBody">
         <constraints>
-          <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
+            <minimum-size width="450" height="-1"/>
+            <preferred-size width="450" height="-1"/>
+          </grid>
         </constraints>
         <properties>
           <text value="Label"/>
